logs/coyote-framework.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coyote_framework'...
Listing './lib/python3.5/site-packages/coyote_framework/config'...
Listing './lib/python3.5/site-packages/coyote_framework/database'...
Compiling './lib/python3.5/site-packages/coyote_framework/database/coyote_db.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/database/coyote_db.py", line 290
    except OperationalError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coyote_framework/drivers'...
Compiling './lib/python3.5/site-packages/coyote_framework/drivers/coyote_driverfactory.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/drivers/coyote_driverfactory.py", line 123
    except WebDriverException, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coyote_framework/log'...
Compiling './lib/python3.5/site-packages/coyote_framework/log/Logger.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/log/Logger.py", line 78
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coyote_framework/mixins'...
Compiling './lib/python3.5/site-packages/coyote_framework/mixins/deprecationwarning.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/mixins/deprecationwarning.py", line 25
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/coyote_framework/mixins/filesystem.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/mixins/filesystem.py", line 15
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coyote_framework/mixins/timer.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/mixins/timer.py", line 26
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coyote_framework/requests'...
Compiling './lib/python3.5/site-packages/coyote_framework/requests/requestdriver.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/requests/requestdriver.py", line 108
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coyote_framework/testing'...
Compiling './lib/python3.5/site-packages/coyote_framework/testing/coyote_test.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/testing/coyote_test.py", line 80
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coyote_framework/tests'...
Listing './lib/python3.5/site-packages/coyote_framework/tests/apps'...
Compiling './lib/python3.5/site-packages/coyote_framework/tests/apps/test_run_parallel.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/tests/apps/test_run_parallel.py", line 27
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coyote_framework/tests/urbuilder'...
Compiling './lib/python3.5/site-packages/coyote_framework/tests/urbuilder/TestUrlBuilderHostArgument.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/tests/urbuilder/TestUrlBuilderHostArgument.py", line 25
    except ValueError, error:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coyote_framework/util'...
Listing './lib/python3.5/site-packages/coyote_framework/util/apps'...
Listing './lib/python3.5/site-packages/coyote_framework/util/apps/driver_interop'...
Compiling './lib/python3.5/site-packages/coyote_framework/util/apps/driver_interop/drivercookies.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/util/apps/driver_interop/drivercookies.py", line 51
    except WebDriverException, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coyote_framework/util/apps/parallel.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/util/apps/parallel.py", line 51
    except Exception, e:  # Swallow errors or else the process will hang
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coyote_framework/util/apps/polling'...
Listing './lib/python3.5/site-packages/coyote_framework/util/apps/randomwords'...
Listing './lib/python3.5/site-packages/coyote_framework/util/apps/templating'...
Listing './lib/python3.5/site-packages/coyote_framework/util/pageobjects'...
Listing './lib/python3.5/site-packages/coyote_framework/util/pageobjects/web'...
Listing './lib/python3.5/site-packages/coyote_framework/util/testing'...
Listing './lib/python3.5/site-packages/coyote_framework/util/testing/framework'...
Listing './lib/python3.5/site-packages/coyote_framework/util/urls'...
Listing './lib/python3.5/site-packages/coyote_framework/webdriver'...
Listing './lib/python3.5/site-packages/coyote_framework/webdriver/helper'...
Compiling './lib/python3.5/site-packages/coyote_framework/webdriver/helper/Locator.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/webdriver/helper/Locator.py", line 9
    print key, ":", str(value)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coyote_framework/webdriver/webdriver'...
Listing './lib/python3.5/site-packages/coyote_framework/webdriver/webdriverwrapper'...
Compiling './lib/python3.5/site-packages/coyote_framework/webdriver/webdriverwrapper/WebDriverWrapper.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/webdriver/webdriverwrapper/WebDriverWrapper.py", line 923
    except httplib.BadStatusLine, e:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/coyote_framework/webdriver/webdriverwrapper/WebElementWrapper.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/webdriver/webdriverwrapper/WebElementWrapper.py", line 835
    except BadStatusLine, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coyote_framework/webdriver/webdriverwrapper/exceptions'...
Compiling './lib/python3.5/site-packages/coyote_framework/webdriver/webdriverwrapper/exceptions/WebDriverWrapperException.py'...
***   File "./lib/python3.5/site-packages/coyote_framework/webdriver/webdriverwrapper/exceptions/WebDriverWrapperException.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/coyote_framework/webdriver/webdriverwrapper/support'...
Listing './lib/python3.5/site-packages/coyote_framework-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/example'...
Listing './lib/python3.5/site-packages/example/example_app'...
Listing './lib/python3.5/site-packages/example/example_app/config'...
Listing './lib/python3.5/site-packages/example/example_app/page_objects'...
Listing './lib/python3.5/site-packages/example/example_app/page_objects/components'...
Listing './lib/python3.5/site-packages/example/example_app/utility'...
Listing './lib/python3.5/site-packages/example/example_tests'...
Compiling './lib/python3.5/site-packages/example/example_tests/TestClickButton_ShowText.py'...
***   File "./lib/python3.5/site-packages/example/example_tests/TestClickButton_ShowText.py", line 37
    print "Yep, can't see anything"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
